k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: performance-java-server
spec:
  selector:
    matchLabels:
      app: performance-java-server
  replicas: 3
  template:
    metadata:
      labels:
        app: performance-java-server
    spec:
      imagePullSecret:
        - name: github-registry
      containers:
        - name: performance-java-server
          image: ghcr.io/willschipp/performance-java-app:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8080 
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
              initialDelaySeconds: 3
              periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
              initialDelaySeconds: 3
              periodSeconds: 3
      nodeSelector:
        performance: "true"
