k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: performance-java-server-service
spec:
  selector:
    app: performance-java-server
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: NodePort
